syntax = "proto3";

package searchify;

service Internal {
  rpc Hello(HelloRequest) returns (HelloResponse) {}
  rpc RaftMessage(SearchifyRaftMessage) returns (EmptyResponse) {}

  rpc Set(KeyValue) returns (EmptyResponse) {}
  rpc Get(Key) returns (KeyValue) {}
}

message HelloRequest {
  uint64 peer_id = 1;
  bool is_master = 2;
}

message HelloResponse {
  uint64 peer_id = 1;
}

message SearchifyRaftMessage {
  bytes wrapped_message = 1;
  uint64 raft_group_id = 2;
}

message EmptyResponse {
}

message RaftLocalState {
  uint64 term = 1;
  uint64 vote = 2;
  uint64 commit = 3;
  uint64 last_index = 4;
}

message ApplyState {
  uint64 applied_index = 1;
  uint64 truncated_index = 2;
  uint64 truncated_term = 3;
}

message RaftGroupMetaState {
  uint64 id = 1;
  repeated Peer peers = 2;
}

message Peer {
  uint64 id = 1;
}

message Key {
  bytes key = 1;
}

message KeyValue {
  bytes key = 1;
  bytes value = 2;
}

message KeyValueEntry {
  oneof entry {
    KeyValue set = 1;
  }
}

message SearchEntry {
}

message EntryContext {
  uint64 id = 1;
}